# videopython

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  DEVELOPMENT.md  EDITING_VERIFICATION.md  IMPROVEMENTS.md  LICENSE  README.md  RELEASE_NOTES.md  TODO.md  benchmark_baseline.py  benchmark_streaming.py  deploy.sh  dub_test.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-generation.txt  requirements.txt  test_new_models.py  test_scene_understanding.py  test_wan2_video.py
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: CNAME  index.md
docs/api/: editing.md  effects.md  index.md  operations.md  registry.md  text.md  transforms.md  transitions.md
docs/api/ai/: auto_edit.md  dubbing.md  effects.md  generation.md  swapping.md  transforms.md  understanding.md  video_analysis.md
docs/api/core/: audio.md  scene.md  video.md
docs/design/: auto-editing.md
docs/examples/: ai-video.md  auto-subtitles.md  large-videos.md  social-clip.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: auto-editing.md  llm-integration.md  mcp.md
docs/stylesheets/: extra.css
experiments/: spec_prediction.py  validated_pipeline.py
scripts/: README.md  download_videos.py  test_backends.py  verify_generative_models.py
src/stubs/cv2/: __init__.pyi  classes.pyi  constants.pyi  functions.pyi
src/stubs/diffusers/: __init__.pyi
src/stubs/kokoro/: __init__.pyi
src/stubs/transformers/: __init__.pyi  models.pyi
src/stubs/whisper/: __init__.pyi  tokenizer.pyi  whisper.pyi
src/tests/: conftest.py  test_compose.py  test_config.py  test_effects.py  test_frame_description.py  test_frames.py  test_import_isolation.py  test_packaging_extras.py  test_scene.py  test_scenes.py  test_text.py  test_text_overlay.py  test_transcription.py  test_transcriptions.py  test_transitions.py  test_video.py  test_video_description.py  test_video_description_base.py
src/tests/ai/: __init__.py  test_audio_classifier.py  test_audio_to_text_device.py  test_auto_edit.py  test_detection_inference.py  test_device.py  test_dubbing.py  test_effects.py  test_face_tracker.py  test_generation_image.py  test_generation_video.py  test_mcp.py  test_objects.py  test_ollama_backend.py  test_ops_registration.py  test_phash_dedup.py  test_qwen3_translator.py  test_scene_vlm_device.py  test_scene_vlm_parsing.py  test_streamability_alignment.py  test_swapping.py  test_text_detector.py  test_transforms.py  test_translator.py  test_video_analysis.py  test_video_analysis_scene_first.py
src/tests/ai/generation/: test_audio.py
src/tests/ai/understanding/: test_audio.py  test_color.py  test_image.py  test_image_to_text.py  test_scene_detector.py  test_summarize.py  test_text.py  test_video.py  test_video_analyzer.py
src/tests/base/: __init__.py  test_audio.py  test_combine.py  test_detection.py  test_draw_detections.py  test_effects.py  test_fonts.py  test_frame_description.py  test_frame_iterator.py  test_image_text.py  test_import_isolation.py  test_operation.py  test_plan_error_prompt_line.py  test_registry.py  test_scene.py  test_streaming.py  test_text_overlay.py  test_transcription.py  test_transforms.py  test_transitions.py  test_video.py  test_video_description_base.py  test_video_edit.py
src/tests/editing/: conftest.py  test_ass_subtitles.py  test_audio_filter_graph.py  test_audio_ops.py  test_effects.py  test_multicam.py  test_native_transform_streaming.py  test_operation.py  test_plan_repair.py  test_premiere_xml.py  test_streamability.py  test_streaming.py  test_subtitle_fit.py  test_transforms.py  test_transitions.py  test_video_edit.py
src/typehints/cv2/: classes.pyi  constants.pyi  functions.pyi
src/typehints/pydub/: __init__.pyi  audio_segment.pyi  effects.pyi  generators.pyi  scipy_effects.pyi  silence.pyi  utils.pyi
src/typehints/transformers/: __init__.pyi  models.pyi
src/videopython/: __init__.py  project_config.py
src/videopython/ai/: __init__.py  _device.py  _ollama.py  _optional.py  _predictor.py  _revisions.py  backends.py  config.py  effects.py  errors.py  exceptions.py  keyframe.py  ops.py  registry.py  transforms.py  video_analysis.py
src/videopython/ai/auto_edit/: __init__.py  backend.py  catalog.py  editor.py  local.py  models.py  resolve.py
src/videopython/ai/dubbing/: __init__.py  _tts_backend.py  audio_ops.py  cache.py  config.py  dubber.py  expressiveness.py  loudness.py  models.py  pipeline.py  quality.py  remux.py  separation.py  timing.py  translation.py  voice_sample.py
src/videopython/ai/generation/: __init__.py  _qwen3_tts_compat.py  _tts_backend.py  audio.py  image.py  qwen3.py  translation.py  video.py
src/videopython/ai/swapping/: __init__.py  inpainter.py  models.py  segmenter.py  swapper.py
src/videopython/ai/understanding/: __init__.py  _detector.py  _yolo.py  audio.py  classification.py  color.py  detection.py  faces.py  frames.py  (+11 more)
src/videopython/audio/: __init__.py  audio.py
src/videopython/base/: __init__.py  _dimensions.py  _ffmpeg.py  _video_io.py  combine.py  compose.py  description.py  draw_detections.py  edit.py  effects.py  exceptions.py  frames.py  image_text.py  operation.py  pipeline.py  progress.py  registry.py  scene.py  scene_description.py  scenes.py  streaming.py  transcription.py  transforms.py  transitions.py  utils.py  video.py  video_description.py
src/videopython/editing/: __init__.py  _ass.py  _easing.py  _schema.py  audio_ops.py  effects.py  multicam.py  operation.py  premiere_xml.py  streaming.py  transcription_overlay.py  transforms.py  video_edit.py
src/videopython/generation/: audio.py  image.py  init.py  video.py
src/videopython/mcp/: __init__.py  server.py
src/videopython/understanding/: transcription.py
src/videopython/utils/: __init__.py  common.py  image.py  logger.py  stability_generation.py  text.py  text_to_speech.py
tests/: conftest.py  test_compose.py  test_effects.py  test_transforms.py  test_transitions.py  test_utils.py  test_video.py
videopython/: compose.py  pipeline.py  project_config.py  transitions.py  video.py
videopython/tests/: test_video.py
(+16 files in other folders)
