[project]
name = "videopython"
version = "0.28.0"
description = "Minimal video generation and processing library."
authors = [
    { name = "Bartosz Wójtowicz", email = "bartoszwojtowicz@outlook.com" },
    { name = "Bartosz Rudnikowicz", email = "bartoszrudnikowicz840@gmail.com" },
    { name = "Piotr Pukisz", email = "piotr.pukisz@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10, <3.14"
keywords = [
    "python",
    "videopython",
    "video",
    "movie",
    "opencv",
    "generation",
    "editing",
    "ai",
    "shorts",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.25.2",
    "opencv-python-headless>=4.9.0.80",
    "pillow>=12.1.1",
    "tqdm>=4.66.3",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "types-Pillow>=10.2.0.20240213",
    "types-tqdm>=4.66.0.20240106",
    "pytest-cov>=6.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]
ai = [
    "accelerate>=0.29.2",
    "diffusers>=0.30.0",
    "hf-transfer>=0.1.9",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=5.2.0",
    "openai-whisper>=20240930",
    "pyannote-audio>=4.0.0",
    # Voice activity detection (used by AudioToText to gate Whisper language detection)
    "silero-vad>=5.1",
    "numba>=0.61.0",
    "ollama>=0.4.5",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    # Detection backends
    "ultralytics>=8.0.0",
    "easyocr>=1.7.0",
    # Audio classification (AST via transformers - no separate dep needed)
    # Scene detection
    "transnetv2-pytorch>=1.0.5",
    # Voice cloning TTS (Chatterbox Multilingual by Resemble AI)
    "chatterbox-tts>=0.1.7",
    # Translation (Marian MT tokenizer requires sentencepiece)
    "sentencepiece>=0.1.99",
    # Audio source separation
    "demucs>=4.0.0",
]

# Required for pip install videopython[ai] - pip uses optional-dependencies, not dependency-groups
[project.optional-dependencies]
ai = [
    "accelerate>=0.29.2",
    "diffusers>=0.30.0",
    "hf-transfer>=0.1.9",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=5.2.0",
    "openai-whisper>=20240930",
    "pyannote-audio>=4.0.0",
    # Voice activity detection (used by AudioToText to gate Whisper language detection)
    "silero-vad>=5.1",
    "numba>=0.61.0",
    "ollama>=0.4.5",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    # Detection backends
    "ultralytics>=8.0.0",
    "easyocr>=1.7.0",
    # Audio classification (AST via transformers - no separate dep needed)
    # Scene detection
    "transnetv2-pytorch>=1.0.5",
    # Voice cloning TTS (Chatterbox Multilingual by Resemble AI)
    "chatterbox-tts>=0.1.7",
    # Translation (Marian MT tokenizer requires sentencepiece)
    "sentencepiece>=0.1.99",
    # Audio source separation
    "demucs>=4.0.0",
]

[project.urls]
Homepage = "https://videopython.com"
Repository = "https://github.com/bartwojtowicz/videopython/"
Documentation = "https://videopython.com"

[tool.mypy]
mypy_path = "src/stubs"

[[tool.mypy.overrides]]
module = [
    "torch", "torch.*",
    "diffusers", "diffusers.*",
    "ollama", "ollama.*",
    "ultralytics", "ultralytics.*",
    "easyocr", "easyocr.*",
    "transformers", "transformers.*",
    "transnetv2_pytorch", "transnetv2_pytorch.*",
    "chatterbox", "chatterbox.*",
    "demucs", "demucs.*",
    "huggingface_hub", "huggingface_hub.*",
    "pyannote", "pyannote.*",
    "silero_vad", "silero_vad.*",
    "cv2", "cv2.*",
]
ignore_missing_imports = true

[tool.uv]
# chatterbox-tts 0.1.7 pins strict versions of torch, torchaudio, numpy, and
# diffusers that conflict with pyannote-audio (torch>=2.8) and CogVideoX
# (diffusers>=0.30). Override to let the resolver pick compatible versions.
# The ai dependency floors are aligned with these overrides to keep pip and uv
# resolving similar versions.
override-dependencies = [
    "torch>=2.8.0", "torchaudio>=2.8.0", "numpy>=2.0.0", "diffusers>=0.30.0",
    # ultralytics depends on opencv-python which conflicts with our
    # opencv-python-headless (both provide cv2). Exclude opencv-python so
    # only the headless variant is installed.
    "opencv-python ; sys_platform == '_'",
]
# Pin minimum versions for transitive deps with known vulnerabilities.
# Pygments 2.20.0 has a security fix but breaks mkdocs (passes None to html.escape).
# Keep pygments<2.20.0 until a compatible release is available.
constraint-dependencies = ["requests>=2.33.0", "pygments>=2.19.2,<2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videopython"]

[tool.hatch.build.targets.sdist]
include = ["src/videopython", "src/videopython/py.typed"]

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
markers = [
    "requires_model_download: marks tests that require downloading ML models (skipped in CI)",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP006", # Use PEP 604 annotation (e.g., `list[str]` instead of `typing.List[str]`)
    "UP007", # Use `X | Y` for type annotations (instead of `Optional[X]` and `Union[X, Y]`)
]
isort.known-first-party = ["videopython"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
