[project]
name = "videopython"
version = "0.48.0"
description = "Minimal video generation and processing library."
authors = [
    { name = "Bartosz Wójtowicz", email = "bartoszwojtowicz@outlook.com" },
    { name = "Bartosz Rudnikowicz", email = "bartoszrudnikowicz840@gmail.com" },
    { name = "Piotr Pukisz", email = "piotr.pukisz@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11, <3.14"
keywords = [
    "python",
    "videopython",
    "video",
    "movie",
    "opencv",
    "generation",
    "editing",
    "ai",
    "shorts",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.25.2",
    "opencv-python-headless>=4.9.0.80",
    "pillow>=12.1.1",
    "resvg-py>=0.3.2",
    "tqdm>=4.66.3",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "types-Pillow>=10.2.0.20240213",
    "types-tqdm>=4.66.0.20240106",
    "pytest-cov>=6.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]
# Thin dev-workflow group so `uv sync` / uv.lock keep working. Resolves the
# SAME set as the aggregate `[ai]` extra below via a PEP 508 self-reference, so
# there is a single source of truth (the granular extras) and no hand-sync.
# `test_packaging_extras.py` asserts this stays consistent with the extra.
ai = ["videopython[ai]"]

# pip install videopython[<extra>] - pip uses optional-dependencies, not dependency-groups.
#
# Granular extras partition the heavy ML deps by the leaf module that imports
# them, so consumers install only what a capability needs. `ai` is a convenience
# aggregate that installs EVERYTHING via PEP 685 self-references (no hand-sync).
# `test_packaging_extras.py` enforces union(granular) == ai as a drift guard.
[project.optional-dependencies]
# Speech recognition / diarization (understanding/audio.py).
asr = [
    "openai-whisper>=20240930",
    "pyannote-audio>=4.0.0",
    # Voice activity detection (used by AudioToText to gate Whisper language detection)
    "silero-vad>=5.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]
# Visual understanding: detection, scene/temporal, VLM (understanding/{faces,
# objects,temporal,image}.py + video_analysis). transformers also backs the AST
# AudioClassifier and the SceneVLM; qwen-vl-utils is the SceneVLM preprocessor;
# imagehash is the SceneVLM frame-dedup; transnetv2 is scene detection.
vision = [
    "ultralytics>=8.0.0",
    "transnetv2-pytorch>=1.0.5",
    "transformers>=5.2.0",
    "qwen-vl-utils>=0.0.10",
    "imagehash>=4.3",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]
# Audio source separation (understanding/separation.py).
separation = [
    "demucs>=4.0.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]
# Text translation backends (generation/translation.py MarianMT +
# generation/qwen3.py Qwen3 GGUF). MarianTokenizer requires sentencepiece.
translation = [
    "transformers>=5.2.0",
    "sentencepiece>=0.1.99",
    "llama-cpp-python>=0.3.0",
    "torch>=2.8.0",
]
# Voice cloning TTS (generation/audio.py — Chatterbox Multilingual by Resemble
# AI). ISOLATED: chatterbox-tts 0.1.7 carries the strict pins that force the
# [tool.uv].override-dependencies block. This is the ONLY extra that drags them.
# Left to chatterbox's own torch==2.6.0 / torchaudio==2.6.0 pins (no floors
# here) so `pip install videopython[tts]` resolves STANDALONE in its own
# image/Modal function -- the whole point of running TTS behind SpeechBackend.
# The all-in [ai] resolve forces torch>=2.8.0 over this via override-dependencies.
tts = [
    "chatterbox-tts>=0.1.7",
]
# Local media generation: SDXL/CogVideoX (generation/{image,video}.py) +
# MusicGen (generation/audio.py TextToMusic, via transformers).
generation = [
    "diffusers>=0.30.0",
    "transformers>=5.2.0",
    "accelerate>=0.29.2",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]
# Dubbing pipeline's hard top-level deps: transcription (asr) + source
# separation (separation) + translation, plus BS.1770 loudness matching
# (dubbing/loudness.py). Deliberately EXCLUDES tts/chatterbox: local synthesis
# runs through the SpeechBackend protocol against a separately-installed [tts]
# extra or an injected remote backend, so a [dub] image co-resolves WITHOUT
# chatterbox's override-forcing pin. A bare [dub] install that hits local
# synthesis raises a clear [tts]-pointing ImportError.
dub = [
    "videopython[asr,separation,translation]",
    # Loudness measurement (BS.1770) for dub-vs-source loudness matching (M3)
    "pyloudnorm>=0.1.1",
]
# LLM-authored editing planner (auto_edit/local.py OllamaVisionLLM). A light HTTP
# client for a local Ollama server -- no torch -- so the user runs any pulled
# vision model. Structured output uses Ollama's schema `format`.
ollama = [
    "ollama>=0.5.0",
]
# Convenience aggregate for the full auto-edit pipeline: scene analysis (vision +
# asr) plus the Ollama planner. Mirrors how [dub] aggregates its stages.
director = [
    "videopython[asr,vision,ollama]",
]
# Convenience aggregate: installs every capability. PEP 685 self-references make
# this the single "everything" install with no hand-duplicated dep list. This
# combined resolve is what the [tool.uv].override-dependencies block exists for.
ai = ["videopython[asr,vision,separation,translation,tts,generation,dub,ollama]"]

[project.urls]
Homepage = "https://videopython.com"
Repository = "https://github.com/bartwojtowicz/videopython/"
Documentation = "https://videopython.com"

[tool.mypy]
mypy_path = "src/stubs"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
    "torch", "torch.*",
    "diffusers", "diffusers.*",
    "ollama", "ollama.*",
    "ultralytics", "ultralytics.*",
    "transformers", "transformers.*",
    "transnetv2_pytorch", "transnetv2_pytorch.*",
    "chatterbox", "chatterbox.*",
    "demucs", "demucs.*",
    "huggingface_hub", "huggingface_hub.*",
    "pyannote", "pyannote.*",
    "silero_vad", "silero_vad.*",
    "cv2", "cv2.*",
    "llama_cpp", "llama_cpp.*",
    "pyloudnorm", "pyloudnorm.*",
    "qwen_vl_utils", "qwen_vl_utils.*",
    "imagehash", "imagehash.*",
]
ignore_missing_imports = true

[tool.uv]
# LOAD-BEARING ONLY for the all-in `[ai]` resolve (every extra installed
# together, as in dev/CI and `uv sync`). chatterbox-tts 0.1.7 (the `[tts]`
# extra) pins strict torch/torchaudio/numpy/diffusers that conflict with
# pyannote-audio (torch>=2.8, `[asr]`) and CogVideoX (diffusers>=0.30,
# `[generation]`). This override lets the combined resolver pick compatible
# versions. A consumer installing a SUBSET that excludes chatterbox — notably
# `[dub]` (asr+separation+translation+pyloudnorm, no tts) — co-resolves cleanly
# WITHOUT this override; that clean `[dub]` resolve is the whole point of
# isolating `[tts]`. The ai dependency floors are aligned with these overrides
# to keep pip and uv resolving similar versions.
override-dependencies = [
    "torch>=2.8.0", "torchaudio>=2.8.0", "numpy>=2.0.0", "diffusers>=0.30.0",
    # ultralytics depends on opencv-python which conflicts with our
    # opencv-python-headless (both provide cv2). Exclude opencv-python so
    # only the headless variant is installed.
    "opencv-python ; sys_platform == '_'",
]
# Pin minimum versions for transitive deps with known vulnerabilities.
# Pygments 2.20.0 has a security fix but breaks mkdocs (passes None to html.escape).
# Keep pygments<2.20.0 until a compatible release is available.
constraint-dependencies = ["requests>=2.33.0", "pygments>=2.19.2,<2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videopython"]
artifacts = [
    "src/videopython/base/fonts/*.ttf",
    "src/videopython/base/fonts/LICENSE_DEJAVU",
    "src/videopython/base/fonts/*-OFL.txt",
]

[tool.hatch.build.targets.sdist]
include = ["src/videopython", "src/videopython/py.typed"]
artifacts = [
    "src/videopython/base/fonts/*.ttf",
    "src/videopython/base/fonts/LICENSE_DEJAVU",
    "src/videopython/base/fonts/*-OFL.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
markers = [
    "requires_model_download: marks tests that require downloading ML models (skipped in CI)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP006", # Use PEP 604 annotation (e.g., `list[str]` instead of `typing.List[str]`)
    "UP007", # Use `X | Y` for type annotations (instead of `Optional[X]` and `Union[X, Y]`)
]
isort.known-first-party = ["videopython"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
