[project]
name = "videopython"
version = "0.50.0"
description = "Minimal video generation and processing library."
authors = [
    { name = "Bartosz Wójtowicz", email = "bartoszwojtowicz@outlook.com" },
    { name = "Bartosz Rudnikowicz", email = "bartoszrudnikowicz840@gmail.com" },
    { name = "Piotr Pukisz", email = "piotr.pukisz@gmail.com" },
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11, <3.14"
keywords = [
    "python",
    "videopython",
    "video",
    "movie",
    "opencv",
    "generation",
    "editing",
    "ai",
    "shorts",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.25.2",
    "opencv-python-headless>=4.9.0.80",
    "pillow>=12.1.1",
    "resvg-py>=0.3.2",
    "tqdm>=4.66.3",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "types-Pillow>=10.2.0.20240213",
    "types-tqdm>=4.66.0.20240106",
    "pytest-cov>=6.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "mkdocstrings-python>=2.0.1",
]
# Thin dev-workflow group so `uv sync` / uv.lock keep working. References the
# `[ai]` extra so dev installs every AI capability (single source of truth).
ai = ["videopython[ai]"]

# pip install "videopython[ai]" - pip uses optional-dependencies, not dependency-groups.
#
# A single [ai] extra installs every AI capability. The heavy ML deps still load
# lazily at first use (no top-level imports under ai/), so importing videopython
# stays light even with [ai] installed.
[project.optional-dependencies]
ai = [
    # Speech recognition / diarization (understanding/audio.py)
    "openai-whisper>=20240930",
    "pyannote-audio>=4.0.0",
    "silero-vad>=5.1",
    # Visual understanding: detection, scene/temporal, VLM (understanding/*, video_analysis)
    "ultralytics>=8.0.0",
    "transnetv2-pytorch>=1.0.5",
    "transformers>=5.2.0",
    "imagehash>=4.3",
    # Audio source separation (understanding/separation.py)
    "demucs>=4.0.0",
    # Voice cloning TTS (generation/audio.py — Chatterbox); its strict pins drive
    # the [tool.uv].override-dependencies block below.
    "chatterbox-tts>=0.1.7",
    # Local media generation: SDXL/CogVideoX + MusicGen (generation/*)
    "diffusers>=0.30.0",
    "accelerate>=0.29.2",
    # Dubbing loudness matching (dubbing/loudness.py)
    "pyloudnorm>=0.1.1",
    # LLM-authored editing planner (auto_edit/local.py OllamaVisionLLM)
    "ollama>=0.5.0",
    # Shared torch stack
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
]
# MCP server (videopython/mcp/). Pin <2 — v2 is pre-release/breaking.
mcp = ["mcp>=1.27,<2"]

[project.scripts]
videopython-mcp = "videopython.mcp.server:main"

[project.urls]
Homepage = "https://videopython.com"
Repository = "https://github.com/bartwojtowicz/videopython/"
Documentation = "https://videopython.com"

[tool.mypy]
mypy_path = "src/stubs"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true

[[tool.mypy.overrides]]
module = [
    "torch", "torch.*",
    "diffusers", "diffusers.*",
    "ollama", "ollama.*",
    "ultralytics", "ultralytics.*",
    "transformers", "transformers.*",
    "transnetv2_pytorch", "transnetv2_pytorch.*",
    "chatterbox", "chatterbox.*",
    "demucs", "demucs.*",
    "huggingface_hub", "huggingface_hub.*",
    "pyannote", "pyannote.*",
    "silero_vad", "silero_vad.*",
    "cv2", "cv2.*",
    "pyloudnorm", "pyloudnorm.*",
    "imagehash", "imagehash.*",
    "mcp", "mcp.*",
]
ignore_missing_imports = true

[tool.uv]
# chatterbox-tts 0.1.7 (in [ai]) pins strict torch/torchaudio/numpy/diffusers
# that conflict with pyannote-audio (torch>=2.8) and CogVideoX (diffusers>=0.30).
# These overrides let the combined [ai] resolve pick compatible versions; the
# floors in [ai] are aligned with them so pip and uv resolve similar versions.
override-dependencies = [
    "torch>=2.8.0", "torchaudio>=2.8.0", "numpy>=2.0.0", "diffusers>=0.30.0",
    # ultralytics depends on opencv-python which conflicts with our
    # opencv-python-headless (both provide cv2). Exclude opencv-python so
    # only the headless variant is installed.
    "opencv-python ; sys_platform == '_'",
]
# Pin minimum versions for transitive deps with known vulnerabilities.
# Pygments 2.20.0 has a security fix but breaks mkdocs (passes None to html.escape).
# Keep pygments<2.20.0 until a compatible release is available.
constraint-dependencies = ["requests>=2.33.0", "pygments>=2.19.2,<2.20.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/videopython"]
artifacts = [
    "src/videopython/base/fonts/*.ttf",
    "src/videopython/base/fonts/LICENSE_DEJAVU",
    "src/videopython/base/fonts/*-OFL.txt",
]

[tool.hatch.build.targets.sdist]
include = ["src/videopython", "src/videopython/py.typed"]
artifacts = [
    "src/videopython/base/fonts/*.ttf",
    "src/videopython/base/fonts/LICENSE_DEJAVU",
    "src/videopython/base/fonts/*-OFL.txt",
]

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = ["src/tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
markers = [
    "requires_model_download: marks tests that require downloading ML models (skipped in CI)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "UP006", # Use PEP 604 annotation (e.g., `list[str]` instead of `typing.List[str]`)
    "UP007", # Use `X | Y` for type annotations (instead of `Optional[X]` and `Union[X, Y]`)
]
isort.known-first-party = ["videopython"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
